Javaのバージョンに合わせた記述に変更