@@ -1,24 +1,32 @@
 package test55;
 
+import java.io.BufferedReader;
 import java.io.IOException;
-import java.net.URI;
-import java.net.http.HttpClient;
-import java.net.http.HttpRequest;
-import java.net.http.HttpResponse;
+import java.io.InputStreamReader;
+import java.net.HttpURLConnection;
+import java.net.URL;
 
 public class WebClient2 {
-  
-  public static void main(String[] args)
-    throws IOException,InterruptedException {
-    HttpClient client = HttpClient.newHttpClient();
-    URI uri = URI.create("http://example.com/");
-    HttpRequest req = HttpRequest.newBuilder(uri).build();
-    HttpResponse<String> response = client.send(
-        req, HttpResponse.BodyHandlers.ofString());
-    String body = response,body();
-    body.lines()
-      .limit(5)
-      .forEach(System.out::println);
-  }
-  
+
+    public static void main(String[] args) throws IOException {
+        URL url = new URL("http://example.com/");
+        HttpURLConnection connection = (HttpURLConnection) url.openConnection();
+
+        connection.setRequestMethod("GET");
+
+        int responseCode = connection.getResponseCode();
+        if (responseCode == HttpURLConnection.HTTP_OK) {
+            BufferedReader in = new BufferedReader(new InputStreamReader(connection.getInputStream()));
+            String inputLine;
+            int lineCount = 0;
+
+            while ((inputLine = in.readLine()) != null && lineCount < 5) {
+                System.out.println(inputLine);
+                lineCount++;
+            }
+            in.close();
+        } else {
+            System.out.println("HTTP Request Failed with response code: " + responseCode);
+        }
+    }
 }
